bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:6: error: reassignment to val
      fin=1
         ^In1020:9: error: reassignment to val
      fin=1
         ^